--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Momo+Trust+Display:wght@400;500;600;700&display=swap');
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Momo Trust Display', sans-serif;
+}
+
+.task-status {
+  font-family: 'Momo Signature', cursive;
 }
